syntax = "proto3";

package catalogservice;

option go_package = "catalogservicepb/";

import "google/protobuf/timestamp.proto";

service CatalogServiceGRPC {
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  repeated Product products = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  string sex = 4;
  int64 price = 5;
  int32 discount_percentage = 6;
  int32 stock = 7;
  string image_url = 8;
  int64 category_id = 9;
  string category_name = 10;
  int64 brand_id = 11;
  string brand_name = 12;   
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}